package br.edu.univ.matriculas.domain;

public class Aluno extends Usuario { }