package br.edu.univ.matriculas.domain;

public class Professor extends Usuario {
  private String siape;
  public String getSiape() { return siape; }
  public void setSiape(String siape) { this.siape = siape; }
}