package br.edu.univ.matriculas.domain;

public enum StatusMatricula { PENDENTE, CONFIRMADA, CANCELADA }