package br.edu.univ.matriculas.domain;

public enum TipoDisciplina { OBRIGATORIA, OPTATIVA }